as3/examples/bad/bad18.dj
class C extends Object {
  nat foo(Object o) {
    nat i;
    0;
  }
}
main {
  C o;
  //types of 'then' and 'else' branches mismatch
  if(1) {1;} else {o;}; 
  0;
}
